force-app/main/default/objects/QFlowURLIntegration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AnonymousId__c</fullName>
        <label>AnonymousId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hostname__c</fullName>
        <label>Hostname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visualforce_hostname__c</fullName>
        <label>Visualforce_hostname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>QFlowURLIntegration</label>
</CustomObject>